--- a/MotoActions/res/xml/main_panel.xml
+++ b/MotoActions/res/xml/main_panel.xml
@@ -48,4 +48,17 @@
                 android:targetClass="com.moto.actions.FPGestureSettingsActivity" />
     </Preference>
 
+    <PreferenceCategory
+        android:title="@string/extrasheader">
+        <Preference
+        android:key="dirac"
+        android:title="@string/dirac_title"
+        android:summary="@string/dirac_summary"
+        android:icon="@drawable/ic_settings_dirac"
+        android:persistent="false" >
+           <intent 
+                android:targetPackage="com.moto.actions"
+                android:targetClass="com.moto.actions.dirac.DiracActivity" />
+    </Preference>
+
 </PreferenceScreen>
