--- a/MotoActions/res/drawable/switchbar_background.xml
+++ b/MotoActions/res/drawable/switchbar_background.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?android:attr/colorControlHighlight">
-    <item android:drawable="?android:attr/colorSecondary" />
-</ripple>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:color="#333333" android:state_activated="false" />
+    <item android:color="@*android:color/custom_accent_color" android:state_activated="true" />
+</selector>
