--- a/MotoActions/res/layout/switch_bar.xml
+++ b/MotoActions/res/layout/switch_bar.xml
@@ -32,10 +32,10 @@
         android:paddingStart="48dp"
         android:maxLines="2"
         android:ellipsize="end"
-        android:textAppearance="@android:style/TextAppearance.Material.Title"
-        android:textColor="?android:attr/textColorPrimary"
-        android:textAlignment="viewStart"
-        android:text="@string/switch_bar_on" />
+        android:textAppearance="@*android:style/TextAppearanceTitle"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textAlignment="viewStart" />
 
     <Switch
         android:id="@android:id/switch_widget"
